UPDATE #comment Updated mobile layout issues in tables

--- a/src/app/shared/table/table.component.scss
+++ b/src/app/shared/table/table.component.scss
@@ -83,6 +83,13 @@ mcs-table {
       padding: $table-data-cell-padding;
     }
   }
+
+  .squishy-cell {
+    @include breakpoint(small) {
+      word-break: break-all;
+      white-space: normal;
+    }
+  }
 }
 
 .mcs-table-footer-wrapper {
